--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             </div>
             <div class="column_right">
                 <a href=""><img src="images/Top_Menu/Facebook.png"></a>
-                |
+                <img src="images/Top_Menu/line.png">
                 <a href=""><img src="images/Top_Menu/Tweter.png"></a>
-                |
+                <img src="images/Top_Menu/line.png">
                 <a href=""><img src="images/Top_Menu/Behance.png"></a>
             </div>
         </div>
@@ -51,11 +51,11 @@
         <div class="Slider" id="slider">
             <div class="slider_header1"><h3>Design Studio and Digital Agency</h3></div>
             <div class="slider_row">
-                <div class="slide_button"  id="previousButton"><a><img src="images/Slider/_.png"></a></div>
+                <div class="slide_button"  id="previousButton"><a><img src="images/Slider/left.png"></a></div>
                 <div class="slider_tagline_block">
                     <div class="slider_text">WE ARE ATLANTIDA</div>
                 </div>
-                <div class="slide_button" id="nextButton"><a><img src="images/Slider/_2.png"></a></div>
+                <div class="slide_button" id="nextButton"><a><img src="images/Slider/right.png"></a></div>
             </div>
             <a href="#sign_up_background" class="get_started"><p style="margin-top: 11px;">Get Started</p></a>
             
