--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             </div>
             <div class="column_right">
                 <a href=""><img src="images/Top_Menu/Facebook.png"></a>
-                <img src="images/Top_Menu/line.png">
+                <img src="images/Top_Menu/line_nav.png">
                 <a href=""><img src="images/Top_Menu/Tweter.png"></a>
-                <img src="images/Top_Menu/line.png">
+                <img src="images/Top_Menu/line_nav.png">
                 <a href=""><img src="images/Top_Menu/Behance.png"></a>
             </div>
         </div>
