--- a/index.html
+++ b/index.html
@@ -669,9 +669,9 @@
                 
                     <div class="footer_designer_social">
                         <a href=""><img src="images/Footer/Facebook.png"></a>
-                        <img src="images/Footer/_.png">
+                        <img src="images/Top_Menu/line_nav.png">
                         <a href=""><img src="images/Footer/Tweter.png"></a>
-                        <img src="images/Footer/_2.png">
+                        <img src="images/Top_Menu/line_nav.png">
                         <a href=""><img src="images/Footer/Behance.png"></a>
                     </div>
             </div>
