--- a/index.html
+++ b/index.html
@@ -353,9 +353,9 @@
                     <div class="designer_img"><img src="images/Our_Team/Divider2.png"></div>
                     <div class="designer_social">
                         <a href=""><img src="images/Our_Team/Facebook.png"></a>
-                        <img src="images/Our_Team/_.png">
+                        <img src="images/Our_Team/line.png">
                         <a href=""><img src="images/Our_Team/Tweter.png"></a>
-                        <img src="images/Our_Team/_.png">
+                        <img src="images/Our_Team/line.png">
                         <a href=""><img src="images/Our_Team/Behance.png"></a>
                     </div>
                  
