--- a/index.html
+++ b/index.html
@@ -534,9 +534,9 @@
                 
                 <div class="footer_block_columnLeft_designer_social">
                     <a href=""><img src="images/Footer/Facebook.png"></a>
-                    <img src="images/Footer/_.png">
+                    <img src="images/Footer/line.png">
                     <a href=""><img src="images/Footer/Tweter.png"></a>
-                    <img src="images/Footer/_2.png">
+                    <img src="images/Footer/line.png">
                     <a href=""><img src="images/Footer/Behance.png"></a>
                 </div>
             </div>
